--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@types/d3": "7.4.3",
     "d3": "^7.9.0",
     "powerbi-visuals-api": "~5.3.0",
+    "powerbi-visuals-tools": "^7.0.2",
     "powerbi-visuals-utils-formattingmodel": "6.0.4"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^8.8.0",
     "eslint": "^9.11.1",
     "eslint-plugin-powerbi-visuals": "^1.0.0",
-    "typescript": "5.5.4"
+    "ts-loader": "^9.5.4",
+    "typescript": "^5.5.4"
   }
 }
